Remove "pi" website

--- a/28bit/index.html
+++ b/28bit/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-This is a placeholder site while I come up with a workable design.
+This is a placeholder site while I come up with a workable design. 28-bit.com
 
 </body>
 </html>
