Minor change to martyhope.com page.

--- a/default.html
+++ b/default.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    This is a test of the martyhope.com website. And another test.
+    Default page for martyhope.com
 
 </body>
 </html>
