Update to include first cut js and css files

--- a/keepportlandreal/default.html
+++ b/keepportlandreal/default.html
@@ -1,4 +1,6 @@
 <html>
+<script src="js/default.js"></script>
+<link rel="stylesheet" href="css/site.css">
 <body>
 This is the default page for keepportlandreal.net
 </body>
