Update project settings and source file formatting.

--- a/keepportlandreal/default.html
+++ b/keepportlandreal/default.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
 <html>
-<script src="js/default.js"></script>
-<link rel="stylesheet" href="css/site.css">
+<head>
+  <script src="js/default.js"></script>
+  <link rel="stylesheet" href="css/site.css">
+</head>
 <body>
-This is the default page for keepportlandreal.net
+<span>
+  This is the default page for keepportlandreal.net
+</span>
 </body>
 </html>
