Update filler text

--- a/keepportlandreal/default.html
+++ b/keepportlandreal/default.html
@@ -5,8 +5,14 @@
   <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
-<span>
-  This is the default page for keepportlandreal.net
-</span>
+<header>
+  <h2>Keep Portland Real</h2>
+  <span>I love my city! The purpose of this site is to show a real side of Portland, OR. Beyond the Hype. Beyond the stereotypes.</span>
+  <ul>
+    <li>Home</li>
+    <li>About</li>
+    <li>Contact</li>
+  </ul>
+</header>
 </body>
 </html>
