Update menu HTML

--- a/keepportlandreal/default.html
+++ b/keepportlandreal/default.html
@@ -8,11 +8,13 @@
 <header>
   <h2>Keep Portland Real</h2>
   <span>I love my city! The purpose of this site is to show a real side of Portland, OR. Beyond the Hype. Beyond the stereotypes.</span>
-  <ul>
-    <li>Home</li>
-    <li>About</li>
-    <li>Contact</li>
-  </ul>
+  <div class="menu" id="main">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
 </header>
 </body>
 </html>
