See previous checkin comment

--- a/keepportlandreal/default.html
+++ b/keepportlandreal/default.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="js/default.js"></script>
   <link rel="stylesheet" href="css/site.css">
+  <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
 <header>
   <h2>Keep Portland Real</h2>
   <span>I love my city! The purpose of this site is to show a real side of Portland, OR. Beyond the Hype. Beyond the stereotypes.</span>
-  <div class="menu" id="main">
+  <div class="menu" id="mainMenu">
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
@@ -16,5 +16,13 @@
     </ul>
   </div>
 </header>
+<footer>
+
+</footer>
+
+<script src="js/default.js"></script>
+<script src="lib/jquery/dist/jquery.min.js"></script>
+<script src="lib/bootstrap/dist/css/bootstrap.min.css"></script>
+
 </body>
 </html>
