--- a/keepportlandreal/default.html
+++ b/keepportlandreal/default.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <header> 
-  <h2>Keep Portland Real</h2>
-  <span>I love my city! The purpose of this site is to show a real side of Portland, OR. Beyond the Hype. Beyond the stereotypes.</span>
+  <h1>Keep Portland Real</h1>
+  <span>Portland, OR is a truly great city. It is also my home However, with shows like Portlandia, a mythology has been created around the city. I hope that through this site, I can show the real side of Portland. </span>
   <div class="menu" id="mainMenu">
     <ul>
       <li><a href="#">Home</a></li>
