Add less and js implementations for testing

--- a/keepportlandreal/default.html
+++ b/keepportlandreal/default.html
@@ -7,10 +7,10 @@
 <body>
 <header> 
   <h1>Keep Portland Real</h1>
-  <span>Portland, OR is a truly great city. It is also my home However, with shows like Portlandia, a mythology has been created around the city. I hope that through this site, I can show the real side of Portland. </span>
+  <span>Portland, OR is a truly great city! It is also my home However, with shows like Portlandia, a mythology has been created around the city. I hope that through this site, I can show the real side of Portland. </span>
   <div class="menu" id="mainMenu">
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="#" id="homeLink">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
@@ -20,9 +20,10 @@
   &copy; 2016 28-bit.com
 </footer>
 
-<script src="js/default.js"></script>
 <script src="lib/jquery/dist/jquery.min.js"></script>
-<script src="lib/bootstrap/dist/css/bootstrap.min.css"></script>
+<script src="lib/bootstrap/dist/css/bootstrap.min.js"></script>
+
+<script src="js/default.js"></script>
 
 </body>
 </html>
