--- a/keepportlandreal/default.html
+++ b/keepportlandreal/default.html
@@ -22,6 +22,7 @@
 
 <script src="lib/jquery/dist/jquery.min.js"></script>
 <script src="lib/bootstrap/dist/css/bootstrap.min.js"></script>
+<script src="js/test.js"></script>
 
 <script src="js/default.js"></script>
 
