--- a/default.html
+++ b/default.html
@@ -1,6 +1,7 @@
 <html>
+<script src="lib/audio.js"></script>
 <body>
-Default page for martyhope.com
+Default page for martyhope.com. This will change over time
 </body>
 </html>
 
