Add HTML 5 audio controls. Add listener to play sound

--- a/default.html
+++ b/default.html
@@ -1,7 +1,11 @@
 <html>
-<script src="lib/audio.js"></script>
+<script src="lib/audioContext.js"></script>
+<script src="lib/customAudio.js"></script>
 <body>
-Default page for martyhope.com. This will change over time
+    <audio controls>
+        <source src="sounds/snore.mp3" type="audio/mpeg">
+        Your browser does not support gthe audio element
+    </audio>
 </body>
 </html>
 
