--- a/default.html
+++ b/default.html
@@ -4,7 +4,7 @@
 <body>
     <audio controls>
         <source src="sounds/snore.mp3" type="audio/mpeg">
-        Your browser does not support gthe audio element
+        Your browser does not support the audio element
     </audio>
 </body>
 </html>
