--- a/default.html
+++ b/default.html
@@ -2,6 +2,7 @@
 <script src="lib/audioContext.js"></script>
 <script src="lib/customAudio.js"></script>
 <body>
+  <p>This is from my iPad</p>
     <audio controls>
         <source src="sounds/snore.mp3" type="audio/mpeg">
         Your browser does not support the audio element
