--- a/default.html
+++ b/default.html
@@ -7,7 +7,10 @@
         <source src="sounds/snore.mp3" type="audio/mpeg">
         Your browser does not support the audio element
     </audio>
-  <iframe width='400px' height='400px' src='https://webchat.botframework.com/embed/_martybot?s=L0wE0vz1_pQ.cwA.r2s.Cq3IVChTo52xdwQYIiWNOercBnkQWtRH7uTtD3uAgqQ'></iframe>
+    <div>
+  <iframe width='400px' height='400px' src='https://webchat.botframework.com/embed/_martybot?s=L0wE0vz1_pQ.cwA.r2s.Cq3IVChTo52xdwQYIiWNOercBnkQWtRH7uTtD3uAgqQ'>
+</iframe>
+</div>
 
 </body>
 </html>
