--- a/default.html
+++ b/default.html
@@ -1,17 +1,19 @@
 <html>
 <script src="lib/audioContext.js"></script>
 <script src="lib/customAudio.js"></script>
+<link rel="stylesheet" type="text/css" src="css/site.css"/>
 <body>
-  <p>This is a placeholder website for testing web development/features. One day it will be something.</p>
+  <p class="header">This is a placeholder website for testing web development/features. One day it will be something.</p>
+  <div class="audio">
     <audio controls>
         <source src="sounds/snore.mp3" type="audio/mpeg">
         Your browser does not support the audio element
     </audio>
-    <div>
-  <iframe width='400px' height='400px' src='https://webchat.botframework.com/embed/_martybot?s=L0wE0vz1_pQ.cwA.r2s.Cq3IVChTo52xdwQYIiWNOercBnkQWtRH7uTtD3uAgqQ'>
+  </div>
+  <div class="chat">
+  <iframe class="chat" src='https://webchat.botframework.com/embed/_martybot?s=L0wE0vz1_pQ.cwA.r2s.Cq3IVChTo52xdwQYIiWNOercBnkQWtRH7uTtD3uAgqQ'>
 </iframe>
 </div>
-
 </body>
 </html>
 
