Add head section

--- a/default.html
+++ b/default.html
@@ -1,19 +1,21 @@
 <html>
-<script src="lib/audioContext.js"></script>
-<script src="lib/customAudio.js"></script>
-<link rel="stylesheet" type="text/css" src="css/site.css"/>
-<body>
-  <p class="header">This is a placeholder website for testing web development/features. One day it will be something.</p>
-  <div class="audio">
-    <audio controls>
-        <source src="sounds/snore.mp3" type="audio/mpeg">
-        Your browser does not support the audio element
-    </audio>
-  </div>
-  <div class="chat">
-  <iframe class="chat" src='https://webchat.botframework.com/embed/_martybot?s=L0wE0vz1_pQ.cwA.r2s.Cq3IVChTo52xdwQYIiWNOercBnkQWtRH7uTtD3uAgqQ'>
-</iframe>
-</div>
-</body>
+  <head>
+  <script src="lib/audioContext.js"></script>
+  <script src="lib/customAudio.js"></script>
+  <link rel="stylesheet" type="text/css" src="css/site.css"/>
+  </head>
+  <body>
+    <p class="header">This is a placeholder website for testing web development/features. One day it will be something.</p>
+    <div class="audio">
+      <audio controls>
+          <source src="sounds/snore.mp3" type="audio/mpeg">
+          Your browser does not support the audio element
+      </audio>
+    </div>
+    <div class="chat">
+    <iframe class="chat" src='https://webchat.botframework.com/embed/_martybot?s=L0wE0vz1_pQ.cwA.r2s.Cq3IVChTo52xdwQYIiWNOercBnkQWtRH7uTtD3uAgqQ'>
+    </iframe>
+    </div>
+  </body>
 </html>
 
