fix css declaration

--- a/default.html
+++ b/default.html
@@ -2,7 +2,7 @@
   <head>
   <script src="lib/audioContext.js"></script>
   <script src="lib/customAudio.js"></script>
-  <link rel="stylesheet" type="text/css" src="css/site.css"/>
+  <link rel="stylesheet" type="text/css" href="css/site.css"/>
   </head>
   <body>
     <p class="header">This is a placeholder website for testing web development/features. One day it will be something.</p>
