Minor update to body text.

--- a/default.html
+++ b/default.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/site.css"/>
   </head>
   <body>
-    <p class="header">This is a placeholder website for testing web development/features. One day it will be something.</p>
+    <p class="header">This is a placeholder website for testing web development/features.</p>
     <div class="audio">
       <audio controls>
           <source src="sounds/snore.mp3" type="audio/mpeg">
